<resources>
    <string name="app_name">Alerta Ensenada</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_fenomeno">Fenomenos perturbadores</string>
    <string name="menu_avisos">Avisos</string>
    <string name="menu_pronostico">Pronostico del clima</string>
    <string name="menu_numEmergencia">Numeros de emergencias</string>
    <string name="menu_hacerEnCasos">¿Qué hacer en casos de?</string>
    <string name="menu_mochila">Mochila de emergencia</string>
    <string name="menu_planFamiliar">Plan familiar</string>
    <string name="fen_geologico">Geologico</string>
    <string name="fen_Hidrometeorilogico">Hidrometeorologico</string>
    <string name="fen_socio_organizativo">Socio-Organizativo</string>
    <string name="fen_quimico_tecnologico">Quimico tecnologico</string>
    <string name="fen_sanitario_ecologico">Sanitario ecologico</string>
    <string name="button_FenomenosPerturvadores">Fenomenos perturvadores</string>
    <string name="button_Avisos">Avisos</string>
    <string name="button_PronosticoClima">Pronostico de clima</string>
    <string name="button_NumeroEmergencias">Numero de emergencias</string>
    <string name="button_HacerEnCasos">¿Que hacer en casos de?</string>
    <string name="button_mochila">Mochila de emergencia</string>
    <string name="Button_atlasDeMexico">Atlas Nacional De Mexico</string>
    <string name="Button_CNPD">Centro Nacional De Prevención de Desastres</string>
    <string name="Button_CoordinacionNacionalPC">Coordinacion nacional de Proteccion Civil</string>
    <string name="TextPolicia">Policia</string>
    <string name="TextBombero">Bomberos</string>
    <string name="textImss">Ambulancias</string>
    <string name="textCFE">CFE</string>
    <string name="textCESPE">CESPE</string>
    <string name="textFallo">   En geologia una falla es una fractura o zona
                                de fracturas a lo largo de la cual ha ocurrido
                                un desplazamineto relativo de los bloques
                                paralelos a la fractura.
                                Esencialmente, una falla es una
                                descontinuacion que se forma debido a la
                                fractura  de grandes bloques de rocas en la
                                tierra cuando las fuerzas tectonicas superan
                                la resistencia  de las rocas. El moviento
                                causante de esa dislocación puede tener
                                diversas direcciones: vertical, horizontal o una
                                combinación de ambas.

                                Cuando la actividad en una falla es repentina
                                y brusca, se puede producir un gran
                                terremoto, provocando incluso una ruptura en
                                la superficie terrestre. Lo que genera y se
                                evidencia en la superficie del terreno es una
                                forma topografica llamada escarpede
                                falla. Estos vestigios de la falla es la superficie
                                tienden a desaparacer por la acción de la
                                erosión, provocados por la lluvia y el viento, y
                                por la presencia de vegetacion o actividad
                                humana</string>
    <string name="textSismo">   Un sismo es un temblor, sacudida o
                                movimiento repentino de la superficie
                                terrestre, los terremotos ocurren a lo largo de
                                grietas(llamadas fallas) en la superficie
                                terrestre. Los terremotos se pueden sentir a
                                traves de grandes areas aunque por lo general
                                duran menos de una minuto</string>
    <string name="textTsunami"> El tsunami es un tren de olas gigantiscas
                                que se propagan en olas en los puertos
                                generadas por pertubaciones fuertes de la
                                superficie del oceano. El tsunami tiene 3
                                etapas: Generacion(donde se produce)
                                propaganda(trayecto recorrido por la ola) e
                                inuncacion(llegada de las olas).

                                Es necesario resaltar que hay otros varios tipos de
                                tsunamis, esto depende de si intesidad, por
                                lo que no todos son destructivos. Ante dicha
                                informacion, la cruz roja lanzo una guia
                                basica sobre que hacer antes, durant y
                                despues de un desastre natural de esta
                                magnitud</string>
    <string name="textVolcal">  Un volvan es una abertura de la tierra por
                                donde sale el magna, que es una roca fundida
                                formada en su interior, los volcanes toman
                                generalmente forma de cerro o montaña, por
                                la acumulacion de capas de lava y cenizas
                                alrededor de la abertura. La ceniza emitida
                                por los volcanes esta formada por
                                fragmentos de roca del tamaño de la arena y
                                la gravilla, que se pulverizan durante las
                                explosiones volcanicas, los volcanes se
                                llaman inactivos cuando ha estaado miles de
                                años sin actividad o han hecho erupcion de
                                actividad interrumpidas por lapsos de reposo
                                variables.

                                Es el mecanismo del sistema nacional de
                                proteccion que mantiene informacion sobre
                                los diferentes niveles de peligro que presentan
                                la actividad volcanica, El color verde indica
                                que puedes desarrollar las actividades con
                                normalidad, El color amarrillo significa que tu
                                debes estar alerta y pendiente de lo que te
                                digan las autoridades y las noticias y sobre
                                todos seguir las indicaciones que te den, El
                                color rojo es la señal de alarmar e indicar que la
                                poblacion debera ubicarse en lugares
                                seguros</string>
    <string name="textDerrumbe">    Un corrimiento de tierra, deslave o derrumbe
                                    es el desplazamiento de una masa grande de
                                    tierra que se desprende por una vertienete o
                                    ladera, precipitandose por ella.

                                    Un ejemplo de deslizamiento en masa se
                                    produjo en la presa de Bajón en el noreste de
                                    Italia en 1963 y ocasiono la muerte de unas
                                    2000 personas, al caer en la presa centenares
                                    de millones de m^3  de tierra, arboles y rocas
                                    causaron una ola gigantesca que arraso
                                    varias poblaciones de la cuenca, en especial,
                                    a Longorones</string>
    <string name="textHundimientos">    Un hundimiento de tierra es un movimiento de
                                        la superficie terrestre en el que predomina el
                                        sentido vertical descendente y que tiene lugar
                                        en areas achinales o de mut baja pendiente.
                                        Este movimiento puede ser inducido por
                                        distintas causas y se puede desarrollar con
                                        velocidades muy rapidas o muy lentas segun
                                        sea el mecanismo que da lugar a tal
                                        inestabilidad.

                                        Si el movimiento vertical es lento o muy lento
                                        (metros o centimetros / año) y afecta a una
                                        superficie amplia(km2) con frecuenciase
                                        habla de subsidencia. Si el movimiento es
                                        muy rapida(m/s) se puede hablar de colapso.</string>
    <string name="textAntesUrbano">     Antes</string>
    <string name="textAntes1Urbano">   - Revisa las instalaciones electricas y de gas</string>
    <string name="textAntes2Urbano">   - El buen estado y funcionamiento de extenciones y multiconexiones</string>
    <string name="textAntes3Urbano">   - Que los cerillos y colillas de cigrros esten bien apagados antes de desecharlos</string>
    <string name="textAntes4Urbano">   - Evite conectar varios aparatos en un solo enchufe</string>
    <string name="textAntes5Urbano">   - Sustituir los fusibles por objetos metalicos</string>
    <string name="textAntes6Urbano">   - Fumar en la cama</string>
    <string name="textAntes7Urbano">   - Jugar con velas, cerillos y materiales inflamables</string>
    <string name="textAntes8Urbano">   - Realiza simulaciones de evacuacion y cambate de incendios, donde se maneje el uso de extingidores</string>
    <string name="textDuranteUrbano">   Durante</string>
    <string name="textDurante1Urbano"> - Manten la calma, si es posible, apage el incendio con extintores</string>
    <string name="textDurante2Urbano"> - Corta los suministros de gas y electricidad</string>
    <string name="textDurante3Urbano"> - Si el incendio se propaga, sal del area</string>
    <string name="textDurante4Urbano"> - Dirigete a la puerta de salida mas alejada del fuego</string>
    <string name="textDurante5Urbano"> - Si hay gases y humo desplazate pecho tierra</string>
    <string name="textDurante6Urbano"> - No busques objetos personales</string>
    <string name="textDurante7Urbano"> - Tapate la nariz y boca con un trapo humedo</string>
    <string name="textDurante8Urbano"> - Evita utilizar elevadores</string>
    <string name="textDurante9Urbano"> - Si se prende tu ropa, no corras, tirate al suelo y rueda</string>
    <string name="textDespuesUrbano">   Despues</string>
    <string name="textDespues1Urbano"> - Las autoridades te indicaran cuando puedes regresar</string>
    <string name="textDespues2Urbano"> - Reivsa las instalaciones electricas y de gas antes de volver a autilizarlos</string>
</resources>